# gz-nav-sim

./: .gitignore  FIXES_APPLIED.md  ISAAC_ZMQ_USAGE.md  QUICKSTART.md  README.md  examples_protocol.md  init_manual.py  init_nav.py  init_viewer.py  isaac_guide.md  launch_with_diagnostics.sh  reset_isaac_local.sh  run_d456_rgbd.sh  run_da3_nvblox.sh  run_isaac_nav.sh  run_isaac_zmq_stack.sh  run_multisession_slam.sh  run_sim.sh  run_stable.sh  run_vggt_slam.sh  run_xlerobot_compute_nav.sh  run_xlerobot_passive_slam_nav.sh  run_xlerobot_robot_io.sh  run_xlerobot_rosbridge_io.sh  teleop.py  test_camera.sh  test_da3.sh  viewer.py
.claude/: settings.json
src/gz_nav_sim/: CMakeLists.txt  package.xml
src/gz_nav_sim/config/: building_manifest.json  da3_params.yaml  nav2_params.yaml  nav2_params_d456.yaml  nav2_params_depth_sensor.yaml  nav_destinations.yaml  nvblox_params.yaml  rtabmap_params.yaml  slam_params.yaml  twist_mux.yaml  vggt_slam_params.yaml
src/gz_nav_sim/launch/: nvblox.launch.py  sim_nav.launch.py
src/gz_nav_sim/maps/: sandbox_primary.pgm  sandbox_primary.yaml
src/gz_nav_sim/models/hospital/AdjTable/: model.sdf
src/gz_nav_sim/models/hospital/AnesthesiaMachine/: model.sdf
src/gz_nav_sim/models/hospital/BedTable/: model.sdf
src/gz_nav_sim/models/hospital/BedsideTable/: model.sdf
src/gz_nav_sim/models/hospital/BedsideTable2/: model.sdf
src/gz_nav_sim/models/hospital/CGMClassic/: model.sdf
src/gz_nav_sim/models/hospital/ColBumper/: model.sdf
src/gz_nav_sim/models/hospital/Drawer/: model.sdf
src/gz_nav_sim/models/hospital/ElderLadyPatient/: model.sdf
src/gz_nav_sim/models/hospital/ElderMalePatient/: model.sdf
src/gz_nav_sim/models/hospital/ElectronicsRecycling/: model.sdf
src/gz_nav_sim/models/hospital/ExitSign/: model.sdf
src/gz_nav_sim/models/hospital/Extinguisher cabinet/: model.sdf
src/gz_nav_sim/models/hospital/FemaleVisitor/: model.sdf
src/gz_nav_sim/models/hospital/FemaleVisitorSit/: model.sdf
src/gz_nav_sim/models/hospital/FreezerComp/: model.sdf
src/gz_nav_sim/models/hospital/FreezerCondenser/: model.sdf
src/gz_nav_sim/models/hospital/GarbagePileV1/: model.sdf
src/gz_nav_sim/models/hospital/GarbagePileV2/: model.sdf
src/gz_nav_sim/models/hospital/HOSPI/: model.sdf
src/gz_nav_sim/models/hospital/Handrail/: model.sdf
src/gz_nav_sim/models/hospital/HospitalPillow/: model.sdf
src/gz_nav_sim/models/hospital/InstrumentCart1/: model.sdf
src/gz_nav_sim/models/hospital/InstrumentCart2/: model.sdf
src/gz_nav_sim/models/hospital/KitchenSink/: model.sdf
src/gz_nav_sim/models/hospital/MainTable/: model.sdf
src/gz_nav_sim/models/hospital/MalePatientBed/: model.sdf
src/gz_nav_sim/models/hospital/MaleVisitorOnPhone/: model.sdf
src/gz_nav_sim/models/hospital/MaleVisitorSit/: model.sdf
src/gz_nav_sim/models/hospital/ManualFireAlarmButton/: model.sdf
src/gz_nav_sim/models/hospital/MetalCabinet/: model.sdf
src/gz_nav_sim/models/hospital/MetalCabinetYellow/: model.sdf
src/gz_nav_sim/models/hospital/MopCart3/: model.sdf
src/gz_nav_sim/models/hospital/Nurse/: model.sdf
src/gz_nav_sim/models/hospital/OfficeChairBlack/: model.sdf
src/gz_nav_sim/models/hospital/OpScrubs/: model.sdf
src/gz_nav_sim/models/hospital/OrangeDoors/: model.sdf
src/gz_nav_sim/models/hospital/ParkingTrolleyMax/: model.sdf
src/gz_nav_sim/models/hospital/ParkingTrolleyMin/: model.sdf
src/gz_nav_sim/models/hospital/PatientFSit/: model.sdf
src/gz_nav_sim/models/robot/: model.config  robot.sdf
src/gz_nav_sim/models/robot_d456/: model.config  robot.sdf
src/gz_nav_sim/scripts/: binary_rgbd_bridge_node.py  da3_depth_node.py  depth_to_laserscan_node.py  depth_to_pointcloud_node.py  elevator_teleport.py  isaac_bridge.py  laser_scan_odometry_node.py  low_latency_cmd_bridge.py  merge_worlds.py  nav_destination_node.py  nvblox_mesh_to_gltf.py  pointcloud_visualizer_node.py  rplidar_c1_scan_node.py  rtsp_compressed_bridge_node.py  scan_slam_filter_node.py  semantic_ocr_node.py  semantic_vlm_node.py  trajectory_path_node.py  vggt_slam_bridge.py  vggt_slam_server.py  xlerobot_v2_bridge.py
src/gz_nav_sim/worlds/: combined.world  hospital.world  office.world  sim.sdf
(+135 files in other folders)
